<resources>
    <string name="app_name">AppTendance</string>
    <string name="action_settings">Settings</string>
    <string name="text_vide"></string>

    <string name="item_debut">début</string>
    <string name="item_fin">Fin</string>

    <string name="liste_titre">Liste de présences</string>
    <string name="liste_aucune">Aucune présence enregistrée</string>

    <string name="qrcode_titre">Scannez Code-QR</string>
    <string name="qrcode_pause">Pause</string>
    <string name="qrcode_reprendre">Reprendre</string>

    <string name="fingerprint_titre">Posez votre doigt</string>
    <string name="fingerprint_module">Module en construction</string>

    <string name="matricule_titre">Entrez le matricule</string>
    <string name="matricule_hint">Entrer ici</string>
    <string name="matricule_echec">Matricule non reconnu</string>
    <string name="matricule_verification">Vérification</string>

    <string name="check_verification">Vérification</string>
    <string name="check_success">Opération réussie</string>

    <string name="init_init">Initialisation</string>
    <string name="init_success">Succès</string>
    <string name="init_echec">Echec</string>
    <string name="init_maj">Mise de la liste d\'agents</string>

    <string name="police_roboto_bold">roboto_bold.ttf</string>
    <string name="police_roboto_bold2">roboto_bold2.ttf</string>
    <string name="police_roboto_black">roboto_black.ttf</string>
    <string name="police_roboto_light">roboto_light.ttf</string>
    <string name="police_roboto_reg">roboto_reg.ttf</string>
    <string name="police_sail_regular">sail_regular.otf</string>
    <string name="police_sofia_regular">sofia_regular.otf</string>
    <string name="police_pacifio">pacifio.ttf</string>
    <string name="police_lemonchi">lemonchi.ttf</string>

    <string-array name="moisDeLannee">
        <item>Mois</item>
        <item>Janvier</item>
        <item>Février</item>
        <item>Mars</item>
        <item>Avril</item>
        <item>Mai</item>
        <item>Juin</item>
        <item>Juillet</item>
        <item>Août</item>
        <item>Septembre</item>
        <item>Octobre</item>
        <item>Novembre</item>
        <item>Décembre</item>
    </string-array>

    <string-array name="moisDeLanneeAbrev">
        <item>Jan</item>
        <item>Fév</item>
        <item>Mars</item>
        <item>Avr</item>
        <item>Mai</item>
        <item>Juin</item>
        <item>Juil</item>
        <item>Août</item>
        <item>Sept</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Déc</item>
    </string-array>

    <string-array name="colorMenu">
        <item>#20C659</item>
        <item>#20C659</item>
        <item>#20C659</item>
        <item>#20C659</item>
    </string-array>

</resources>
