<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/len_60"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="@dimen/len_4"
            >
           <FrameLayout
               android:id="@+id/frameTitre"
               android:layout_width="@dimen/len_0"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               >
               <com.servo.apptendance.views.TextViewTeach
                   android:id="@+id/tvTitre"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_horizontal"
                   android:gravity="center"
                   android:drawableLeft="@drawable/ic_list_icon"
                   android:drawablePadding="@dimen/len_8"
                   android:text="@string/liste_titre"
                   android:textSize="@dimen/font_22"
                   android:textColor="@color/colorPrimaryDarkWhatsapp"
                   app:police="roboto_light"
                   />
           </FrameLayout>
           <FrameLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content">
               <com.servo.apptendance.views.FancyButtonBK
                   android:id="@+id/fcyRecherche"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:padding="@dimen/len_8"
                   app:fb_text="@string/text_vide"
                   app:fb_defaultColor="@color/trans"
                   app:fb_focusColor="@color/colorBlueNormal"
                   app:fb_radius="@dimen/len_20"
                   app:fb_iconResource="@drawable/ic_recherche"
                   />
           </FrameLayout>
            <com.servo.apptendance.views.TextViewTeach
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:drawableLeft="@drawable/ic_calendrier"
                android:drawablePadding="@dimen/len_2"
                android:text="24 Janv 2019"
                android:textSize="@dimen/font_20"
                android:textColor="@color/colorPrimaryDarkWhatsapp"
                app:police="roboto_light"
                />
        </LinearLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <com.servo.apptendance.views.RecyclerViewBK
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/recylerList"
                app:recycler_emptyview="@id/emptyView"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:id="@+id/emptyView"
                android:gravity="center"
                android:alpha="1"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_liste_vide"
                    android:layout_margin="@dimen/len_4"
                    />
                <com.servo.apptendance.views.TextViewTeach
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/liste_aucune"
                    android:textColor="@color/colorListeVide"
                    android:textSize="@dimen/font_16"
                    app:police="roboto_light"
                    />
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>