<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:background="@color/white"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/len_12"
        android:orientation="vertical"
        android:gravity="center"
        >
        <com.servo.apptendance.views.TextViewTeach
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/len_60"
            android:gravity="center"
            android:textColor="@color/colorPrimaryDarkWhatsapp"
            android:text="@string/qrcode_titre"
            android:textSize="@dimen/font_24"
            android:drawableLeft="@drawable/ic_qr_icone_zone"
            android:drawablePadding="@dimen/len_4"
            app:police="roboto_light"
            />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <com.journeyapps.barcodescanner.DecoratedBarcodeView
                    android:id="@+id/barcode_scanner"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginRight="@dimen/len_32"
                    android:layout_marginLeft="@dimen/len_32"
                    android:layout_alignParentTop="true"
                    />
                <com.servo.apptendance.views.FancyButtonBK
                    android:id="@+id/fcyPlayPause"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/len_8"
                    android:paddingTop="@dimen/len_8"
                    android:paddingBottom="@dimen/len_8"
                    android:paddingLeft="@dimen/len_14"
                    android:paddingRight="@dimen/len_14"
                    app:fb_borderColor="@color/colorBlueNormal"
                    app:fb_borderWidth="@dimen/len_1"
                    app:fb_radius="@dimen/len_20"
                    app:fb_defaultColor="@color/trans"
                    app:fb_focusColor="@color/colorBlueClickButton"
                    app:fb_textColor="@color/colorBlueNormal"
                    app:fb_text="@string/qrcode_pause"
                    app:fb_iconPosition="left"
                    app:fb_iconPaddingLeft="0dp"
                    />
            </LinearLayout>
            <android.support.v7.widget.CardView
                android:id="@+id/cardState"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/len_32"
                android:layout_marginLeft="@dimen/len_32"
                android:layout_marginBottom="@dimen/len_2"
                android:visibility="gone"
                tools:visibility="visible"
                app:cardCornerRadius="@dimen/len_14"
                app:cardBackgroundColor="@color/white"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    >
                    <com.marozzi.roundbutton.RoundButton
                        android:id="@+id/roundCheck"
                        android:layout_width="@dimen/len_56"
                        android:layout_height="@dimen/len_56"
                        android:background="@color/colorGreenSuccess"
                        app:bgColor="@color/colorGreenSuccess"
                        app:allCorner="@dimen/len_56"
                        />
                    <com.servo.apptendance.views.TextViewTeach
                        android:id="@+id/tvCheck"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/check_verification"
                        android:textSize="@dimen/font_18"
                        android:layout_margin="@dimen/len_8"
                        android:maxLines="1"
                        />
                    <RelativeLayout
                        android:id="@+id/relativeResult"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:id="@+id/ivQrAgent"
                            android:layout_width="@dimen/len_60"
                            android:layout_height="@dimen/len_60"
                            android:layout_centerVertical="true"
                            android:layout_toLeftOf="@id/linearAgents"
                            android:layout_marginRight="@dimen/len_6"
                            android:scaleType="fitCenter"
                            tools:src="@drawable/ic_qrcode"
                            />
                        <LinearLayout
                            android:id="@+id/linearAgents"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:gravity="center"
                            android:layout_centerInParent="true"
                            >
                            <com.servo.apptendance.views.TextViewTeach
                                android:id="@+id/tvNoms"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/font_20"
                                android:textColor="@color/black"
                                app:police="roboto_reg"
                                />
                            <com.servo.apptendance.views.TextViewTeach
                                android:id="@+id/tvMatricule"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/font_16"
                                android:textColor="@color/black"
                                app:police="roboto_light"
                                />
                        </LinearLayout>
                    </RelativeLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </FrameLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>